--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -2,10 +2,10 @@ FROM python:3
 
 WORKDIR /usr/src/app
 COPY requirements.txt ./
-COPY src/ ./
+COPY src/ ./src
 
 RUN pip install --no-cache-dir --upgrade -r ./requirements.txt
 
 EXPOSE 3001
 
-CMD ["uvicorn", "index:app",  "--host", "0.0.0.0", "--port", "80"]
+CMD ["uvicorn", "src.index:app",  "--host", "0.0.0.0", "--port", "80"]
