--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,10 @@ services:
       - 8000:80
     volumes:
       - .:/app
+  mongo:
+    container_name: mongo
+    image: mongo
+    volumes:
+      - ./mongodb:/data/db
+    ports:
+      - "27017:27017"
