--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,3 +12,11 @@ services:
       - ./mongodb:/data/db
     ports:
       - "27017:27017"
+  web:
+    build: ./frontend/pelis_app
+    ports:
+      - "3000:3000"
+    volumes:
+     - .:/app
+     - ./node_modules:/app/node_modules
+    command: npm start
